# atlas-hardfork-planner

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  atlas-protocol-schedule.json  docker-compose.yml  instructions.md
.github/workflows/: publish.yml
data/: arkiv-protocol-schedule.json  atlas-protocol-schedule.json
src/: config.rs  index.html  main.rs  model.rs  quantity.rs  rpc.rs  server.rs  store.rs  validation.rs
